--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -347,12 +347,15 @@ header {
   position: fixed;
   width: 44.8rem;
   background-color: #fff;
-  top: 12.6rem;
+  top: 15.6rem !important;
   left: 50%;
   transform: translateX(-50%);
   padding: 3.2rem;
   border-radius: 11px;
-  z-index: 2;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .signup-form-heading {
@@ -476,6 +479,40 @@ header {
   background-color: #ef5e78;
   transform: translateY(-0.05rem);
   box-shadow: 0 1rem 1.8rem 0 rgba(235, 54, 87, 0.3);
+}
+
+/* search */
+.search-container {
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+  position: relative;
+  top: 70px;
+  left: 20%;
+  transform: translate(-50% , -50%);
+}
+
+.search-input {
+  min-width: 28rem;
+  height: 3.2rem;
+  border: none;
+  border-radius: 9px;
+  padding: 0 1.6rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #e6e6e8;
+  background-color: #313441;
+  border: none;
+  outline: none;
+}
+
+.search-btn {
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: 1.6rem;
+  padding: 8px 28px;
+  border-radius: 8px;
 }
 
 /* ************ */
