feat ( movie detail ) : load dữ liệu trang movie detail ( movie , calendar , relate movie)

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@
     --foreground: 225 4% 81%;
     --primary-color-movie: 349 82% 57%;
     --calendar-border: hsla(220, 3%, 81%, 0.3);
-    --primary-white : white;
+    --button-control-carousel: 0 0% 25%;
+    --primary-white: white;
 
     --bg-main: 227 27% 14%;
     --bg-secondary: 229 14% 22%;
