--- a/src/pages/MovieDetails/components/slider.css
+++ b/src/pages/MovieDetails/components/slider.css
@@ -41,3 +41,33 @@
   color: #ffffff;
   background-color: rgba(255, 255, 255, 0.6);
 }
+@media (max-width: 54em) {
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: 60px;
+    height: 60px;
+  }
+  .swiper-button-prev:after,
+  .swiper-rtl .swiper-button-next:after {
+    font-size: 30px;
+  }
+  .swiper-button-next:after,
+  .swiper-rtl .swiper-button-next:after {
+    font-size: 30px;
+  }
+}
+@media (max-width: 34em) {
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: 50px;
+    height: 50px;
+  }
+  .swiper-button-prev:after,
+  .swiper-rtl .swiper-button-next:after {
+    font-size: 20px;
+  }
+  .swiper-button-next:after,
+  .swiper-rtl .swiper-button-next:after {
+    font-size: 20px;
+  }
+}
