--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -65,13 +65,13 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #cccdd0;
-  background-color: #1a1d2c;
+  /* background-color: #1a1d2c; */
 }
 
 .heading-primary,
 .heading-secondary,
 .heading-tertiary {
-  color: #e6e6e8;
+  /* color: #e6e6e8; */
   font-weight: 600;
   letter-spacing: -0.3px;
 }
@@ -605,7 +605,7 @@ header {
 
 .section-home-collection,
 .section-movie-info-collection {
-  background-color: #313441;
+  /* background-color: #313441; */
   padding: 5.8rem 4.8rem;
   position: relative;
   min-height: 76.8rem;
@@ -637,7 +637,7 @@ header {
 }
 
 .heading-collection {
-  border-bottom: 4px solid #eb3656;
+  /* border-bottom: 4px solid #eb3656; */
 }
 
 .home-collection-container {
@@ -678,7 +678,7 @@ header {
 .home-movie-card {
   display: flex;
   flex-direction: column;
-  background-color: #1a1d2c;
+  /* background-color: #1a1d2c; */
   position: relative;
   border-radius: 11px;
   overflow: hidden;
@@ -720,13 +720,13 @@ header {
   font-weight: 600;
   line-height: 1.4;
   letter-spacing: 0.75px;
-  color: #e8e8ea;
+  /* color: #e8e8ea; */
 }
 
 .movie-genre {
   font-size: 1.1rem;
   font-weight: 500;
-  color: #babbc0;
+  /* color: #babbc0; */
   margin-bottom: 1.4rem;
   letter-spacing: 0.5px;
 }
@@ -740,7 +740,7 @@ header {
 }
 
 .movie-rating {
-  color: #babbc0;
+  /* color: #babbc0; */
   display: flex;
   align-items: center;
   gap: 0.4rem;
@@ -750,8 +750,8 @@ header {
 .collection-icon {
   height: 1.4rem;
   width: 1.4rem;
-  color: #eb3656;
-  fill: #eb3656;
+  /* color: #eb3656;
+  fill: #eb3656; */
 }
 
 .line-2,
@@ -1018,7 +1018,7 @@ header {
   display: flex;
   flex-direction: column;
   line-height: 1.6;
-  color: #eb3656;
+  /* color: #eb3656; */
 }
 
 .location-select-container select {
@@ -1055,7 +1055,7 @@ header {
 
 .selected-location span,
 .selected-theatre span {
-  color: #e6e6e8;
+  /* color: #e6e6e8; */
   font-weight: 400;
 }
 
@@ -1153,7 +1153,7 @@ header {
 .showtimes-screen-container {
   display: grid;
   grid-template-rows: 1fr 1fr;
-  background-color: #171a28;
+  /* background-color: #171a28; */
 }
 
 .showtimes-screen {
@@ -1206,7 +1206,7 @@ header {
 
 .showtimes-startime-btn {
   font-family: inherit;
-  color: #babbc0;
+  /* color: #babbc0; */
   font-size: 1.4rem;
   font-weight: 600;
   line-height: 1.6;
@@ -1214,7 +1214,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 2px solid #eb3656;
+  /* border: 2px solid #eb3656; */
   width: 11rem;
   height: 4.4rem;
   border-radius: 2.8rem;
@@ -1224,7 +1224,7 @@ header {
 }
 
 .showtimes-startime-btn:hover {
-  background-color: #ef5e78;
+  /* background-color: #ef5e78; */
   transform: translateY(-0.4rem);
   border: 2px solid transparent;
 }
@@ -1906,7 +1906,7 @@ header {
   font-size: 4.65rem;
   font-weight: 500;
   letter-spacing: -0.25px;
-  color: #e6e6e6;
+  /* color: #e6e6e6; */
   margin-bottom: 1.3rem;
   line-height: 1.2;
 }
@@ -1925,8 +1925,8 @@ header {
 .movie-info-icon {
   height: 2.4rem;
   width: 2.4rem;
-  color: #eb3656;
-  fill: #eb3656;
+  /* color: #eb3656;
+  fill: #eb3656; */
 }
 
 .movie-info-genre-container {
@@ -1941,12 +1941,12 @@ header {
   gap: 0.6rem;
   font-size: 1.4rem;
   font-weight: 500;
-  color: #babbc0;
+  /* color: #babbc0; */
   letter-spacing: 0.5px;
 }
 
 .movie-info-title {
-  color: #eb3656;
+  /* color: #eb3656; */
   font-weight: 600;
 }
 
@@ -1964,7 +1964,7 @@ header {
 .movie-info-description-heading,
 .movie-info-screen-heading,
 .customer-info-heading {
-  color: #eb3656;
+  /* color: #eb3656; */
   font-size: 3.2rem;
   font-weight: 500;
 }
@@ -1973,7 +1973,7 @@ header {
   font-size: var(--info-desc-font);
   line-height: 1.6;
   letter-spacing: 0.25px;
-  color: #cccdd0;
+  /* color: #cccdd0; */
 }
 
 .movie-info-screen-container {
@@ -1989,7 +1989,7 @@ header {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto 1fr;
   justify-items: center;
-  background-color: #151723;
+  /* background-color: #151723; */
   border-radius: 11px;
 }
 
