--- a/src/styles/queries.css
+++ b/src/styles/queries.css
@@ -268,6 +268,9 @@
   .nav-signed-name {
     display: none;
   }
+  .search-input{
+    display: none;
+  }
 }
 
 /* *************************** */
@@ -278,7 +281,9 @@
   .hero-img {
     width: 65%;
   }
-
+  .search-input{
+    display: none;
+  }
   .hero-text {
     margin: 4.8rem 0;
     padding: 0 4.2rem;
