--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -341,13 +341,28 @@ header {
 /* ************* */
 /* SIGN UP MODAL */
 /* ************* */
-
+.hide-scroll-bar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
 .signup-form,
 .login-form {
   position: fixed;
   width: 44.8rem;
+  
   background-color: #fff;
-  top: 12.6rem;
+  top: 9.6rem;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 3.2rem;
+  border-radius: 11px;
+  z-index: 2;
+}
+.login-form2{
+  position: fixed;
+  width: 44.8rem;
+  background-color: #fff;
+  top: 2.6rem;
   left: 50%;
   transform: translateX(-50%);
   padding: 3.2rem;
