--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@
     --text-location-movie-color: 240 4% 91%;
     --text-card-movie-color: 240 5% 91%;
 
+    --bg-skeleton : rgb(71 85 105);
+
     --background: 230 26% 14%;
     --foreground: 225 4% 81%;
     --primary-color-movie: 349 82% 57%;
