--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -92,7 +92,8 @@ header {
   height: 7rem;
   padding: 0 3.2rem;
   align-items: center;
-  position: sticky;
+  position: fixed;
+  width: 100%;
   top: 0;
   z-index: 3;
   background-color: transparent;
