--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -379,6 +379,28 @@ header {
   border-radius: 11px;
   z-index: 2;
 }
+.signup-form2{
+  position: fixed;
+  width: 44.8rem;
+  background-color: #fff;
+  top: 8.6rem;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 3.2rem;
+  border-radius: 11px;
+  z-index: 2;
+}
+.login-form2{
+  position: fixed;
+  width: 44.8rem;
+  background-color: #fff;
+  top: 2.6rem;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 3.2rem;
+  border-radius: 11px;
+  z-index: 2;
+}
 
 .signup-form-heading {
   display: flex;
@@ -735,6 +757,7 @@ header {
   margin-bottom: 0.8rem;
   font-size: 1.2rem;
   gap: 0.4rem;
+  height: 25px;
 }
 
 .movie-title {
@@ -1119,6 +1142,17 @@ header {
   grid-template-columns: 1fr;
   gap: 4.8rem;
 }
+.section-movies-page {
+  /* background-color: #313441; */
+}
+
+.movies-page-collection {
+  padding-top: 4.8rem;
+  padding-bottom: 9.6rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2.8rem;
+}
 
 .showtimes-card {
   display: grid;
@@ -1295,7 +1329,7 @@ header {
   font-size: 1.2rem;
   font-weight: 500;
   letter-spacing: 0.75px;
-  color: #e6e6e6;
+  /* color: #e6e6e6; */
 }
 
 .genre-input-container:hover {
