--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1852,7 +1852,7 @@ header {
   background-color: #fbd7dd;
   color: #777;
 }
-.selected{
+.selected {
   background-color: #ef5e78;
 }
 
@@ -2431,4 +2431,67 @@ header {
     grid-template-rows: auto 1fr;
     row-gap: 10px;
   }
+}
+
+/* --------------------Payment------------------ */
+.contain-overlay-product-detail {
+  /* position: fixed;
+  top: 0; */
+
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  display: block;
+  justify-content: center;
+  align-items: center;
+}
+.contain-product-detail {
+  width: 100%;
+  display: flex;
+  background-color: var(--white);
+  border-radius: 5px;
+  overflow: hidden;
+}
+.sideBar_pay {
+  /* height: 600px; */
+  background-color: #0054a5;
+  width: 33%;
+  padding-top: 20px;
+  padding-left: 5px;
+}
+.contain_QR_code {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 15px 20px;
+  padding-top: 5px;
+}
+.contain_logo_MBbank {
+  display: flex;
+  justify-content: space-between;
+}
+.line_pay {
+  width: 100%;
+  height: 1px;
+  background-color: #e3e3e3;
+  margin-top: 10px;
+}
+.blockPayment {
+  display: flex;
+  flex-direction: column;
+  color: var(--white);
+  padding: 18px 15px;
+  box-sizing: border-box;
+}
+.timeRestPay {
+  font-size: 2.8rem;
+}
+.notePay {
+  margin-top: 12%;
+}
+.button-back-pay {
+  padding: 10px 0px;
+}
+.button-back-pay:hover {
+  opacity: 0.9;
+  cursor: pointer;
 }
