--- a/src/styles/queries.css
+++ b/src/styles/queries.css
@@ -120,6 +120,7 @@
 @media (max-width: 52em) {
   .logo-container {
     position: absolute;
+    top: 15px;
     left: 50%;
     transform: translateX(-50%);
   }
@@ -623,5 +624,14 @@
 @media ((max-width: 600px) and (min-width: 410px)) {
   .movie-info-screen-container-3d {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 600px) and (max-width: 1280px) {
+  .stepper-item.completed::after {
+    /* position: absolute;
+    content: ''; */
+    /* border-bottom: 10px solid #4bb543; */
+    top: 15px;
+    /* z-index: 3; */
   }
 }
