--- a/src/styles/queries.css
+++ b/src/styles/queries.css
@@ -91,9 +91,11 @@
     padding: 1.4rem 3rem;
   }
 
-  .signup-form,
-  .login-form {
+  .signup-form {
     top: 1.6rem;
+  }
+  .login-form {
+    /* top: 1.6rem; */
   }
 
   .signup-form {
