refactor : refactor lại cách hiển thị lịch chiếu

--- a/src/styles/queries.css
+++ b/src/styles/queries.css
@@ -420,7 +420,7 @@
     grid-template-columns: 0.45fr 0.55fr;
   }
   .showtimes-screen-container {
-    display: grid;
+    /* display: grid; */
   }
 
   /* .showtimes-schedule-container-3d, */
