refactor : Sửa lại logic và tối ưu hóa trang kết quả thanh toán

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -66,6 +66,11 @@ body {
   font-weight: 400;
   color: #cccdd0;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 ::-webkit-scrollbar {
   width: 4px;
 }
