--- a/src/styles/queries.css
+++ b/src/styles/queries.css
@@ -93,12 +93,12 @@
     padding: 1.4rem 3rem;
   }
 
-  <<<<<<<<< Temporary merge branch 1 .signup-form,
+  .signup-form,
   .login-form {
     top: 1.6rem;
   }
 
-  =========.signup-form {
+  .signup-form {
     top: 1.6rem;
   }
 
@@ -106,7 +106,7 @@
     /* top: 1.6rem; */
   }
 
-  >>>>>>>>>Temporary merge branch 2 .signup-form {
+  .signup-form {
     padding: 1.4rem 2.4rem;
   }
 
@@ -128,20 +128,20 @@
 /* *************************** */
 
 @media (max-width: 52em) {
-  <<<<<<<<< Temporary merge branch 1 .logo-container {
+  .logo-container {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
   }
 
-  =========.logo-container {
+  .logo-container {
     position: absolute;
     top: 15px;
     left: 50%;
     transform: translateX(-50%);
   }
 
-  >>>>>>>>>Temporary merge branch 2 .nav-items {
+   .nav-items {
     display: flex;
     flex-direction: column;
     background-color: #313441;
@@ -507,11 +507,11 @@
     width: 75%;
   }
 
-  <<<<<<<<< Temporary merge branch 1 .customer-info-heading {
+  .customer-info-heading {
     margin: 2.4rem 0;
   }
 
-  =========.showtimes-card {
+  .showtimes-card {
     grid-template-columns: 0.45fr 0.55fr;
   }
 
@@ -519,7 +519,7 @@
     /* display: grid; */
   }
 
-  >>>>>>>>>Temporary merge branch 2 .purchase-history-item {
+  .purchase-history-item {
     grid-template-columns: 0.6fr 0.4fr;
   }
 
