--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -71,8 +71,22 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+.scrollable-table::-webkit-scrollbar {
+  width: 1px !important ; /* Độ rộng của thanh cuộn */
+  padding: 0;
+}
+
+.scrollable-table::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Màu nền của đường dẫn cuộn */
+}
+
+.scrollable-table::-webkit-scrollbar-thumb {
+  background-color: darkgrey; /* Màu của nút cuộn */
+  border-radius: 1px;
+  border: 2px solid white; /* Thêm viền trắng xung quanh nút cuộn */
+}
 ::-webkit-scrollbar {
-  width: 4px;
+  width: 2px;
 }
 
 /* Track */
