--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -92,18 +92,18 @@ input::-webkit-inner-spin-button {
 /* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
+  border-radius: 1px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background-color: #b30000;
+  background-color: grey;
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #b30000;
+  background: grey;
 }
 
 /* Track */
